--- a/boletines/css/main.css
+++ b/boletines/css/main.css
@@ -1,155 +1,160 @@
-html,body{
-  margin:0px;
-  font-family: 'Nunito', Arial, Helvetica, sans-serif;
+*{
+    font-family: 'Nunito', sans-serif;
+    text-decoration: none;
+    list-style: none;
+    list-style-position: outside;
 }
-
-img{
-  max-width: 100%;
-}
-
-table{
-  width: 100%;
-  border-spacing: 0;
-}
-
-table td, table th{
-  text-align: left;
-  /*border-bottom: solid 2px;
-  border-color:#3f51b5;*/
-  padding:1em;
-}
-
-table tr:nth-child(even){
-  background-color: #f3e5f5;
-}
-
-a{
-  color:#d500f9;
-  text-decoration: none;
-}
-
-.container{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  background: #642B73;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #C6426E, #642B73);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #C6426E, #642B73); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-}
-
-.content{
-  max-width: 960px;
-  width: 100%;
-  height: 80vh;
-  background-color: #fff;
-  padding:1em;
-  border-radius:10px;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  overflow-y: scroll;
-  box-sizing: border-box;
-  font-size: 1.2rem;
-}
-
-.fa-star, .fa-star-o{
-  color:#ffc400;
-}
-
-
-.title{margin:0.5em 0;text-transform: uppercase;}
-.title-item{
-  padding-bottom: 1em;
-  border-bottom: solid 2px #C6426E;
-}
-.text-center{text-align: center;}
-.position{
-  padding:10px;
-  background-color: #C6426E;
-  color:white;
-  margin-right: 0.5em;
-  border-radius: 4px;
-}
-
-.paragraph{
-  line-height: 1.8em;
-  font-weight: 200;
-}
-
-.main-image{
-  float: left;
-  margin-right: 18px;
-}
-
-.text{float:none;}
-
-.relative{
-  position: relative;
-}
-
-.absolute{
-  position:absolute;
-}
-
-.actions{
-  top:1em;
-  right: 1em;
-}
-
-.close{
-  border:none;
-  outline: none;
-  border-radius:50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 40px;
-  width: 40px;
-  color:white;
-  background-color: #642B73;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  cursor: pointer;
-  font-weight: 200;
-}
-
-.address{
-  font-weight: bold;
-  font-size: 1.2em;
-  color:#642B73;
-}
-
-
-.animated{
-  animation-duration: 0.6s !important;
-  animation-timing-function: cubic-bezier(0.4, 0.0, 0.2, 1) !important;
-}
-
-@media (max-width: 600px){
-  th{display: none;}
-  td{
+/*
+PALETA DE COLORES
+#3b4657 -gris oscuro
+#idk -gris
+#ececec -blanco
+#7ad2b9 -celeste
+#176de4 -azul
+*/
+/* ---------------------CABECERA----------------------------------------*/
+header{
     width: 100%;
-    display: block;
-  }
-  td:nth-of-type(1){
-    font-size: 1.5em;
-    font-weight: bold;
-    color:#642B73;
-  }
+    height: 300px;
+    background-image: url("./Images/Libro_Banner.jpg") ;
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+    background-attachment: fixed;
+    background-position: top center
 }
-
-@media (min-width: 960px){
-  .content{
-    padding:1.8em;
-    font-size: 1rem;
-  }
-  .title{
-    margin: 1em 0;
-  }
-
+/* ---------------------BOTONES----------------------------------------*/
+button img{
+    height: 35px;
+    width: 35px;
+    padding: 2px 0 2px 0;
 }
-
-@media (min-height: 550px){
-  .content{
+button{
+    border-radius: 110%;
+    border: none;
+    padding: 1px 4px 1px 4px;
+    box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.40);
+}
+#Profile-button{
+    position: fixed;
+    right: 60px;
+    top: 10px;
+    animation: color_button_profile 5s alternate-reverse infinite;
+}
+#Home-button{
+    position: fixed;
+    right: 120px;
+    top: 10px;
+    background-color: rgb(255, 123, 0);
+}
+#Back-button{
+    position: fixed;
+    right: 180px;
+    top: 10px;
+    background-color: red;
+}
+/* ---------------------CONTENIDO----------------------------------------*/
+.contenido{
+    float: none;
+    height: auto;
+    width: 100%;
+    display: flex;
+    background-color: #ececec;
+}
+#contenido-2{
+    width: 62%;
+}
+#contenido-3{
+    width: 100%;
+}
+.tittle{
+    width: 100%;
+    display: flex;
+    margin-top: 5em;
+    align-items: center;
+    justify-content: center;
+}
+.container{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#to-figuras-literarias:hover{
+    background-color: rgba(255, 255, 255, 0.707);
+}
+#contenido-4{
+    width: 100%;
+    display: inline-block;
+}
+h1{
+    font-size: 2em;
+    margin: 0.67em 0;
+    width: 5em;
+    text-align: center;
+    background-color: #7ad2b9;
+    color: white;
+    border-radius: 1em;
+    box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.40);
+}
+.number-1{
+    height: 50px;
+    width: 50px;
+    border-radius: 100%;
+    font-size: 35px;
+    margin-right: 10px;
+    font-weight: 500;
+    background-color:#3b4657;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.40);
+}
+.listed-1{
+    width: 50%;
+    color: #3b4657;
+}
+h2{
+    width: 30%;
+}
+.description{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width:55%;
+    color: #3b4657;
+    margin: 0 0 10px 0px;
+}
+.container-aside{
+    width: 30%;
+    margin: 5em 2em 5em;
+}
+#lateral{
     height: 500px;
-  }
+    border-radius: 1em;
+    width: 100%;
+    background-color: #176de4;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1em;
+    color: white;
+    font-weight: bolder;
+    box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.40);
+}
+footer {
+    background-color: #176de4;
+    height: 50px;
+    width: 100%;
+    font-weight: 800;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+@keyframes color_button_profile{
+    0%{background:#aae605}
+    25%{background:  #3adc3a}
+    75%{background:#aae605}
+    100%{background:  #3adc3a}
 }
